# LLM_Analysis_Quiz

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  logging.ini  pyproject.toml  requirements.txt  setup.py  start.bat  start.sh  start_unix.sh
.github/workflows/: ci.yml  main.yml
src/: __init__.py  browser.py  config.py  main.py  models.py  prompts.py  quiz_solver.py
tests/: conftest.py  test_api.py  test_browser.py  test_integration.py  test_prompts.py  test_quiz_solver.py
