[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm-analysis-quiz"
version = "0.1.0"
description = "LLM Analysis Quiz Application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = ">=0.95.0,<1.0.0"
uvicorn = {extras = ["standard"], version = ">=0.23.0,<0.28.0"}
python-dotenv = ">=1.0.0,<2.0.0"
playwright = "^1.40.0"
beautifulsoup4 = ">=4.12.0,<5.0.0"
requests = ">=2.28.0,<3.0.0"
aiohttp = ">=3.8.0,<4.0.0"
pandas = ">=1.5.0,<3.0.0"
numpy = ">=1.24.0,<2.0.0"
python-multipart = ">=0.0.5,<1.0.0"
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0,<4.0.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
python-magic = {version = ">=0.4.27,<1.0.0", markers = "sys_platform != 'win32'"}
python-magic-bin = {version = ">=0.4.14,<1.0.0", markers = "sys_platform == 'win32'"}
PyPDF2 = ">=3.0.0,<4.0.0"
python-docx = ">=0.8.0,<1.0.0"
openpyxl = ">=3.0.0,<4.0.0"
Pillow = ">=9.0.0,<11.0.0"
pytesseract = ">=0.3.0,<0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0,<8.0.0"
pytest-cov = ">=4.0.0,<5.0.0"
httpx = ">=0.24.0,<0.26.0"
pytest-asyncio = ">=0.20.0,<0.22.0"
black = ">=23.0.0,<24.0.0"
isort = ">=5.12.0,<6.0.0"
mypy = ">=1.0.0,<2.0.0"
pre-commit = ">=3.0.0,<4.0.0"

[tool.poetry.scripts]
start = "uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"